--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -24,6 +24,7 @@ jobs:
           export VALUE=$(echo ${{ matrix.distribution }} | tr ':' '-')
           echo "LABEL=$VALUE" >> $GITHUB_ENV
           cat /etc/*release | grep ^ID
+          sleep 120
 
       - name: Checkout Repository
         uses: actions/checkout@v2
