Try ninja -j 1 since so slow on self-hosted

--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
         working-directory: build
         run: |
-          ninja
+          ninja -j 1
 
       - name: Package RPM
         if: ${{ !contains(matrix.distribution, 'ubuntu') }}
