Fix general install to use ./ to find deb files

--- a/.github/workflows/PackageLinux.yml
+++ b/.github/workflows/PackageLinux.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Install
         shell: bash
         run: |
-          ${{ env.INSTALLCOMMAND }} build/dist/srcml*.${{ env.EXTENSION }}
+          ${{ env.INSTALLCOMMAND }} ./build/dist/srcml*.${{ env.EXTENSION }}
 
       - name: Run Installed srcml
         shell: bash
