Restore all platforms as OpenSUSE issue fixed

--- a/.github/workflows/PackageLinux.yml
+++ b/.github/workflows/PackageLinux.yml
@@ -8,25 +8,25 @@ jobs:
     strategy:
       matrix:
         distribution:
-          # - "fedora:rawhide"
-          # - "fedora:35"
-          # - "fedora:latest"
-          # - "fedora:34"
-          # - "fedora:33"
-          # - "fedora:32"
-          # - "centos:8"
-          # - "centos:7"
-          # - "ubuntu:21.10"
-          # - "ubuntu:21.04"
-          # - "ubuntu:20.10"
-          # - "ubuntu:20.04"
-          # - "ubuntu:18.04"
-          # - "ubuntu:16.04"
-          # - "ubuntu:14.04"
+          - "fedora:rawhide"
+          - "fedora:35"
+          - "fedora:latest"
+          - "fedora:34"
+          - "fedora:33"
+          - "fedora:32"
+          - "centos:8"
+          - "centos:7"
+          - "ubuntu:21.10"
+          - "ubuntu:21.04"
+          - "ubuntu:20.10"
+          - "ubuntu:20.04"
+          - "ubuntu:18.04"
+          - "ubuntu:16.04"
+          - "ubuntu:14.04"
           - "opensuse:latest"
           - "opensuse:15.3"
-          # - "opensuse:15.2"
-          # - "opensuse:15.1"
+          - "opensuse:15.2"
+          - "opensuse:15.1"
     runs-on: [ubuntu-latest]
     continue-on-error: true
     container:
