--- a/.github/workflows/PackageLinuxARM.yml
+++ b/.github/workflows/PackageLinuxARM.yml
@@ -9,24 +9,24 @@ jobs:
       matrix:
         distribution:
           - "fedora:rawhide"
-          - "fedora:35"
-          - "fedora:latest"
-          - "fedora:34"
-          - "fedora:33"
-          - "fedora:32"
-          - "centos:8"
-          - "centos:7"
-          - "ubuntu:21.10"
-          - "ubuntu:21.04"
-          - "ubuntu:20.10"
-          - "ubuntu:20.04"
-          - "ubuntu:18.04"
-          - "ubuntu:16.04"
-          - "ubuntu:14.04"
-          - "opensuse:latest"
-          - "opensuse:15.3"
-          - "opensuse:15.2"
-          - "opensuse:15.1"
+          # - "fedora:35"
+          # - "fedora:latest"
+          # - "fedora:34"
+          # - "fedora:33"
+          # - "fedora:32"
+          # - "centos:8"
+          # - "centos:7"
+          # - "ubuntu:21.10"
+          # - "ubuntu:21.04"
+          # - "ubuntu:20.10"
+          # - "ubuntu:20.04"
+          # - "ubuntu:18.04"
+          # - "ubuntu:16.04"
+          # - "ubuntu:14.04"
+          # - "opensuse:latest"
+          # - "opensuse:15.3"
+          # - "opensuse:15.2"
+          # - "opensuse:15.1"
     runs-on: [self-hosted]
     continue-on-error: true
     container:
