Add one more platform to see if it now works

--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -9,7 +9,7 @@ jobs:
     continue-on-error: true
     container:
       image: fedora:34
-      options: --platform linux/amd64
+      options: --platform linux/arm64
     steps:
 
       - name: Checkout Repository
