--- a/.github/workflows/PackageLinuxARM.yml
+++ b/.github/workflows/PackageLinuxARM.yml
@@ -90,7 +90,7 @@ jobs:
         shell: bash
         working-directory: build
         run: |
-          ninja
+          ninja -j
 
       - name: Package
         shell: bash
