Add parameter 0 to -j

--- a/.github/workflows/PackageLinuxARM.yml
+++ b/.github/workflows/PackageLinuxARM.yml
@@ -90,7 +90,7 @@ jobs:
         shell: bash
         working-directory: build
         run: |
-          ninja -j
+          ninja -j 0
 
       - name: Package
         shell: bash
