--- a/.github/workflows/PackageLinuxARM.yml
+++ b/.github/workflows/PackageLinuxARM.yml
@@ -56,7 +56,7 @@ jobs:
         shell: bash
         run: |
           echo "GENERATOR=RPM" >> $GITHUB_ENV
-          echo "INSTALLCOMMAND=dnf install -y -C" >> $GITHUB_ENV
+          echo "INSTALLCOMMAND=dnf install -y" >> $GITHUB_ENV
           echo "EXTENSION=rpm" >> $GITHUB_ENV
 
       - name: Setup CentOS
@@ -64,7 +64,7 @@ jobs:
         shell: bash
         run: |
           echo "GENERATOR=RPM" >> $GITHUB_ENV
-          echo "INSTALLCOMMAND=yum install -y -C" >> $GITHUB_ENV
+          echo "INSTALLCOMMAND=yum install -y" >> $GITHUB_ENV
           echo "EXTENSION=rpm" >> $GITHUB_ENV
 
       - name: Setup OpenSuse
