--- a/.github/workflows/PackageLinuxARM.yml
+++ b/.github/workflows/PackageLinuxARM.yml
@@ -8,14 +8,14 @@ jobs:
     strategy:
       matrix:
         distribution:
-          - "fedora:rawhide"
-          - "fedora:35"
-          - "fedora:latest"
-          - "fedora:34"
-          - "fedora:33"
-          - "fedora:32"
-          - "centos:8"
-          - "centos:7"
+          # - "fedora:rawhide"
+          # - "fedora:35"
+          # - "fedora:latest"
+          # - "fedora:34"
+          # - "fedora:33"
+          # - "fedora:32"
+          # - "centos:8"
+          # - "centos:7"
           - "ubuntu:21.10"
           - "ubuntu:21.04"
           - "ubuntu:20.10"
@@ -23,10 +23,10 @@ jobs:
           - "ubuntu:18.04"
           - "ubuntu:16.04"
           - "ubuntu:14.04"
-          - "opensuse:latest"
-          - "opensuse:15.3"
-          - "opensuse:15.2"
-          - "opensuse:15.1"
+          # - "opensuse:latest"
+          # - "opensuse:15.3"
+          # - "opensuse:15.2"
+          # - "opensuse:15.1"
     runs-on: [self-hosted]
     continue-on-error: true
     container:
