--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -95,7 +95,7 @@ set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/package/welcome.html)
 set(CPACK_PACKAGE_VENDOR "srcML, LLC.")
 
 # contact
-set(CPACK_PACKAGE_CONTACT "Software Development Laboratories srcML.org>")
+set(CPACK_PACKAGE_CONTACT "Software Development Laboratories <srcML.org>")
  
 # package version
 # set as part of project()
