--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -73,7 +73,7 @@ endif()
 if(MSVC)
     install(TARGETS libsrcml_shared COMPONENT SRCML)
 else()
-    install(TARGETS libsrcml_shared LIBRARY COMPONENT SRCML NAMELINK_COMPONENT DEVLIBS)
+    install(TARGETS libsrcml_shared LIBRARY COMPONENT SRCML NAMELINK_COMPONENT SRCMLDEV)
 endif()
 
 if (BUILD_LIBSRCML_STATIC)
@@ -102,13 +102,13 @@ endif()
 add_dependencies(libsrcml parser)
 
 # install the libsrcml include file
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/srcml.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT DEVLIBS)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/srcml.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT SRCMLDEV)
 
 if(MSVC)
     file(GLOB SRCML_DLLS ${WINDOWS_DEP_PATH}/release/bin/*.dll)
     install(FILES ${SRCML_DLLS} DESTINATION bin COMPONENT SRCML)
     file(GLOB SRCML_DLLS ${WINDOWS_DEP_PATH}/release/lib/*.lib)
-    install(FILES ${SRCML_DLLS} DESTINATION lib COMPONENT DEVLIB)
+    install(FILES ${SRCML_DLLS} DESTINATION lib COMPONENT SRCMLDEV)
 endif()
 
 IF(DISTRO MATCHES "Ubuntu" AND CMAKE_INSTALL_LOCAL_ONLY)
