--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -128,7 +128,7 @@ set(SHA1_EXTERNAL ${CMAKE_EXTERNAL_SOURCE_DIR}/TinySHA1.hpp)
 if(NOT EXISTS ${SHA1_EXTERNAL})
     set(SHA1_URL https://raw.githubusercontent.com/mohaps/TinySHA1/master/TinySHA1.hpp)
     message(STATUS "Download ${SHA1_URL}")
-    file(DOWNLOAD {SHA1_URL} ${SHA1_EXTERNAL})
+    file(DOWNLOAD ${SHA1_URL} ${SHA1_EXTERNAL})
 endif()
 
 target_include_directories(parser PUBLIC . ${CMAKE_SOURCE_DIR}/src/libsrcml)
@@ -139,7 +139,8 @@ if(MSVC)
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${Boost_INCLUDE_DIR})
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${ANTLR_INCLUDE_DIR})
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${CMAKE_GENERATED_SOURCE_DIR})
+    target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${CMAKE_EXTERNAL_SOURCE_DIR})
 else()
-    target_include_directories(parser SYSTEM PRIVATE ${CMAKE_GENERATED_SOURCE_DIR})
+    target_include_directories(parser PRIVATE ${CMAKE_GENERATED_SOURCE_DIR})
     target_include_directories(parser PRIVATE ${CMAKE_EXTERNAL_SOURCE_DIR})
 endif()
