Disable warning on external include file

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -139,7 +139,7 @@ if(MSVC)
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${Boost_INCLUDE_DIR})
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${ANTLR_INCLUDE_DIR})
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${CMAKE_GENERATED_SOURCE_DIR})
-    target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${CMAKE_EXTERNAL_SOURCE_DIR})
+    target_compile_options(parser SYSTEM PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${CMAKE_EXTERNAL_SOURCE_DIR})
 else()
     target_include_directories(parser PRIVATE ${CMAKE_GENERATED_SOURCE_DIR})
     target_include_directories(parser PRIVATE ${CMAKE_EXTERNAL_SOURCE_DIR})
