--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -130,5 +130,13 @@ if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
             COMMAND ${CMAKE_COMMAND} -E echo "-- Stripping $<TARGET_FILE:libsrcml_shared>")
     elseif(NOT WIN32)
         set_target_properties(libsrcml_shared PROPERTIES LINK_FLAGS_RELEASE -s)
+
+        # Removes things that the -s option cannot
+        add_custom_command(TARGET libsrcml_shared POST_BUILD
+            COMMAND /usr/bin/strip --remove-section=.comment --remove-section=.note $<TARGET_FILE:libsrcml_shared>
+            COMMAND ${CMAKE_COMMAND} -E echo "-- Stripping $<TARGET_FILE:libsrcml_shared>")
+        add_custom_command(TARGET libsrcml_static POST_BUILD
+            COMMAND /usr/bin/strip -d --remove-section=.comment --remove-section=.note $<TARGET_FILE:libsrcml_static>
+            COMMAND ${CMAKE_COMMAND} -E echo "-- Stripping $<TARGET_FILE:libsrcml_static>")
     endif()
 endif()
