--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -68,7 +68,7 @@ endif()
 message(STATUS "CPack generators: ${CPACK_GENERATOR}")
 
 # summary
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "tool to convert source code to/from the srcML format")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Tool to convert source code to/from the srcML format")
 
 # description
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/package/welcome.html)
