Rename build flag from SRCML_BUILD_USEPCH to SRCML_BUILD_PCH

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -57,7 +57,7 @@ else()
     target_include_directories(srcml SYSTEM PRIVATE ${CMAKE_EXTERNAL_SOURCE_DIR})
 endif()
 target_include_directories(srcml BEFORE PRIVATE . ${CMAKE_SOURCE_DIR}/src/libsrcml)
-if(SRCML_BUILD_USEPCH)
+if(SRCML_BUILD_PCH)
     target_precompile_headers(srcml PRIVATE <srcml_cli.hpp> <srcml_input_src.hpp> <srcml_pipe.hpp> <ParseQueue.hpp> <src_input_libarchive.hpp> <SRCMLStatus.hpp> <WriteQueue.hpp> <ParseRequest.hpp> <TraceLog.hpp> <curl/curl.h>)
 endif()
 
